# ZeroToProd

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20230317005017_make_status_not_null_in_subscriptions.sql  20230403014623_seed_user.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: post.rs
src/routes/login/: get.rs  login.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  subscriptions.rs
